[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/json_editor/editor/json_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/json_editor/editor/dialogs/GotoLineDialog.tscn" type="PackedScene" id=2]

[node name="EditorView" type="Control"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="EditorPanel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="VBoxContainer" parent="EditorPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 579.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusBar" type="HBoxContainer" parent="EditorPanel/Editor"]
margin_right = 996.0
margin_bottom = 20.0

[node name="File" type="MenuButton" parent="EditorPanel/Editor/StatusBar"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"

[node name="Edit" type="MenuButton" parent="EditorPanel/Editor/StatusBar"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 20.0
text = "Edit"
items = [ "Undo", null, 0, false, true, 0, 0, null, "", false, "Redo", null, 0, false, true, 1, 0, null, "", false, "", null, 0, false, true, 2, 0, null, "", true, "Cut", null, 0, false, false, 3, 0, null, "", false, "Copy", null, 0, false, false, 4, 0, null, "", false, "Paste", null, 0, false, false, 5, 0, null, "", false ]

[node name="GotoLineButton" type="Button" parent="EditorPanel/Editor/StatusBar"]
margin_left = 79.0
margin_right = 165.0
margin_bottom = 20.0
text = "Goto Line..."

[node name="FileSplit" type="HSplitContainer" parent="EditorPanel/Editor"]
margin_top = 24.0
margin_right = 996.0
margin_bottom = 572.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPanel/Editor/FileSplit"]
margin_right = 150.0
margin_bottom = 548.0

[node name="Label-Files" type="Label" parent="EditorPanel/Editor/FileSplit/VBoxContainer"]
margin_right = 150.0
margin_bottom = 14.0
text = "Files"
align = 1

[node name="FileList" type="ItemList" parent="EditorPanel/Editor/FileSplit/VBoxContainer"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 548.0
rect_min_size = Vector2( 150, 60 )
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="EditorPanel/Editor/FileSplit"]
margin_left = 162.0
margin_right = 996.0
margin_bottom = 548.0
tabs_visible = false

[node name="GotoLineDialog" parent="." instance=ExtResource( 2 )]
visible = false

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.json", "*.JSON" )
current_dir = "/home/john/Godot_projects/JSONEditorPlugin"
current_path = "/home/john/Godot_projects/JSONEditorPlugin/"

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
